--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <b><a class="navbar-brand" href="/" style="font-family: 'Pacifico', cursive; font-size: 50px;">PyNews</a></b>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+  <b><a class="navbar-brand" href="/" style="font-family: 'Major Mono Display', monospace; font-size: 50px;">PyNews</a></b>
 </nav>
