--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,8 +5,24 @@
     <title>PyNews | Your One Stop for Tech News</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="{{ url_for('static', filename='styles.css') }}">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+      .card-columns{
+        margin: 5%;
+        width: auto;
+      }
+      .padded{
+        margin:20px;
+      }
+      body{
+        font-family: 'JetBrains Mono', monospace;
+      }
+      .card:hover{
+        background-color: #e8e8e8;
+      }
+    </style>
   </head>
   <body>
     {% include 'includes/_navbar.html' %}
